flux/clusters/pinkdiamond/technitium/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium-a
  namespace: technitium
spec:
  serviceName: technitium-a
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: technitium-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: technitium-a
    spec:
      containers:
        - name: technitium
          image: technitium/dns-server:13.4.1
          ports:
            - containerPort: 5380
              name: http-web
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /etc/dns
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: ssd-rbd
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium-b
  namespace: technitium
spec:
  serviceName: technitium-b
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: technitium-b
  template:
    metadata:
      labels:
        app.kubernetes.io/name: technitium-b
    spec:
      containers:
        - name: technitium
          image: technitium/dns-server:13.4.1
          ports:
            - containerPort: 5380
              name: http-web
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /etc/dns
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: ssd-rbd
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
