flux/clusters/pinkdiamond/technitium/service.yml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: technitium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - port: 5380
      targetPort: 5380
      name: http-web
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  namespace: technitium
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.46
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
